Add export function and change column name

--- a/eDowntime/eDownTime/Views/Action/Get.cshtml
+++ b/eDowntime/eDownTime/Views/Action/Get.cshtml
@@ -71,6 +71,7 @@
                     </div>
                     <div class="form-group col-md-12">
                         <a class="btn btn-success" id="btn-search">Search</a>
+                        <a class="btn btn-success" id="btn-export">Export</a>
                         <a class="btn btn-success" id="btn-reset">Reset</a>
                     </div>
                 </div>
@@ -197,6 +198,7 @@
 
 @section Scripts {
     <script src="~/js/action.js"></script>
+    <script src="~/js/file-download.js"></script>
     <script type="text/javascript" src="~/js/common.js"></script>
 
 }
