--- a/eDowntime/eDownTime/Views/Shared/_Layout.cshtml
+++ b/eDowntime/eDownTime/Views/Shared/_Layout.cshtml
@@ -41,6 +41,15 @@
     <script src="~/assets/global/plugins/jquery.min.js" type="text/javascript"></script>
     <link href="~/css/fileattach.css" rel="stylesheet" />
     <!-- END THEME STYLES -->
+    <!-- BEGIN READ EXCEL FILE BY JAVASCRIPT -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.8.0/jszip.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.8.0/xlsx.js"></script>
+    <!-- END READ EXCEL FILE BY JAVASCRIPT -->
+    <!-- BEGIN Excel download -->
+    <script src="~/js/filesaver.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.0/xlsx.full.min.js"></script>
+    <!-- END Excel download -->
 </head>
 <!-- END HEAD -->
 <!-- BEGIN BODY -->
@@ -99,12 +108,6 @@
                                 </ul>
                             </li>
                         }
-
-                        @*<li>
-                            <a asp-action="About" asp-controller="Home">
-                                About
-                            </a>
-                        </li>*@
                         <li class="dropdown dropdown-user dropdown-dark" style="position: absolute; right: 0px;top:0px">
                             @if (User.Identity.IsAuthenticated)
                             {
@@ -203,7 +206,7 @@
     <script src="~/assets/admin/layout3/scripts/demo.js" type="text/javascript"></script>
     <!-- BEGIN PAGE LEVEL SCRIPTS -->
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-    <!-- BEGIddsdsdsN PAGE LEVEL SCRIPTS -->
+    <!-- BEGIN PAGE LEVEL SCRIPTS -->
     <script>
         jQuery(document).ready(function () {
             Metronic.init(); // init metronic core components
@@ -211,10 +214,7 @@
             Demo.init(); // init demo features
         });
     </script>
-    <!-- BEGIN IDLE SECTION -->
-
-    <script src="~/js/site.js"></script>
-    <!-- END IDLE SECTION -->
+  
     <script src="~/js/bootbox.js/bootbox.js"></script>
     <script src="~/js/jquery-validation/jquery.validate.js"></script>
     <script src="~/js/twbs-pagination/jquery.twbsPagination.js"></script>
